Mode 1 works now Meleebot should disable tether for combat and then resume it after

--- a/config/Bot_Efotsi.ini
+++ b/config/Bot_Efotsi.ini
@@ -1,7 +1,7 @@
 [State]
-Mode=2
-Flags=DotOn,DDOn
-Tether=17610
+Mode=3
+Flags=PrintOff,DDOn
+Tether=10641
 
 [Default:CastQueue]
 Print=TRUE
@@ -62,24 +62,32 @@ Pcts=dot_dis:100,dot_poi:94
 
 [Mode:2:Buff]
 MainTank=fire1,b_sta
+Puller=wolf9
 Melee=fire1
 Caster=fire1
-Self=fire1,b_sta
+Self=fire1,b_sta,bihli36
+Bard=b_cha
 
 [Mode:3:Buff]
-MainTank=wolf9,levitate10,fire1,b_sta
-Melee=wolf9,levitate10,fire1
-Caster=wolf9,levitate10,fire1
-Self=wolf9,levitate10,fire1,b_sta,b_groupstr
+MainTank=fire1,b_sta
+Puller=wolf9
+Melee=fire1
+Caster=fire1
+Self=fire1,b_sta,b_groupstr,bihli36
+Bard=b_cha
 
 [Mode:4:Buff]
 MinMana=40
 MainTank=fire1,b_dex,b_sta,b_ac,b_agi,b_regen,b_haste,b_shield
 Puller=wolf9
 Melee=fire1,b_haste
-Caster=fire1
-Self=fire1,b_sta,b_selfbear,b_groupstr
+Caster=fire1,b_regen
+Self=fire1,b_sta,b_selfbear,b_groupstr,b_regen,bihli36
+Bard=b_cha
 
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
 
 [Flag:DDOn:DD]
 Enabled=TRUE
@@ -118,6 +126,7 @@ b_agi=Statistic Buffs,Agility,Single
 b_sta=Statistic Buffs,Stamina,Single
 b_dex=Statistic Buffs,Dexterity,Single
 b_str=Statistic Buffs,Strength,Single
+b_cha=Statistic Buffs,Charisma,Single
 b_selfbear=Utility Beneficial,Illusion: Other,Self
 b_groupsta=Statistic Buffs,Stamina,Group v2
 b_groupdex=Statistic Buffs,Dexterity,Group v2
@@ -187,3 +196,11 @@ malaisement32=     Malaisement                        ;Utility Detrimental,Resis
 shield31=          Shifting Shield                    ;Statistic Buffs,Armor Class,Single
 nimble31=          Nimble                             ;Statistic Buffs,Agility,Single
 scourge31=         Scourge                            ;Damage Over Time,Disease,Single
+deftness39=        Deftness                           ;Statistic Buffs,Dexterity,Single
+chloroplast39=     Chloroplast                        ;Regen,Health,Single
+strength39=        Furious Strength                   ;Statistic Buffs,Strength,Single
+insects38=         Togor's Insects                    ;Utility Detrimental,Slow,Single
+spirit37=          Vigilant Spirit                    ;Pet,Sum: Warder,Self
+snake37=           Venom of the Snake                 ;Damage Over Time,Poison,Single
+bihli36=           Spirit of Bih`Li                   ;Utility Beneficial,Movement,Group v2
+glamour37=         Glamour                            ;Statistic Buffs,Charisma,Single
