--- a/config/Bot_Pystoffe.ini
+++ b/config/Bot_Pystoffe.ini
@@ -1,7 +1,11 @@
 [State]
-Mode=2
-Flags=
-Tether=17610
+Mode=3
+Flags=PrintOff
+Tether=10641
+
+[Default:CastQueue]
+Print=TRUE
+PrintTimer=10
 
 [Default:AutoSit]
 Enabled=TRUE
@@ -11,12 +15,12 @@ OverrideOnMove=FALSE
 OverrideSeconds=10
 
 [Default:Melee]
-Enabled=FALSE
+Enabled=TRUE
 EngageTargetHPs=98
 EngageTargetDistance=180
 
 [Default]
-SpellBar=1:s_mez,2:arms10,3:soothing34,4:amplification30,5:rhythms17,6:warsong7,7:sustenance15,8:accelerando5
+SpellBar=1:s_mez,2:celerity36,3:soothing34,4:amplification30,5:rhythms17,6:dancing39,7:sustenance15,8:accelerando5
 
 [Default:Buff]
 Enabled=FALSE
@@ -36,7 +40,7 @@ Spell=s_mez
 [Mode:2:Twist]
 Enabled=TRUE
 Order=accelerando5,soothing34,sustenance15 ; 8,3,7
-CombatOrder=amplification30,accelerando5,arms10,soothing34,rhythms17,warsong7 ; 4,8,2,3,5,6
+CombatOrder=amplification30,accelerando5,celerity36,soothing34,rhythms17,dancing39 ; 4,8,2,3,5,6
 
 
 ; [Mode:3]
@@ -44,54 +48,60 @@ CombatOrder=amplification30,accelerando5,arms10,soothing34,rhythms17,warsong7 ; 
 
 [Mode:3:Twist]
 Enabled=TRUE
-Order=accelerando5,soothing34,sustenance15 ; 8,3,7
-CombatOrder=amplification30,accelerando5,arms10,soothing34,rhythms17,warsong7 ; 4,8,2,3,5,6
+Order=amplification30,accelerando5,soothing34,sustenance15 ; 8,3,7
+CombatOrder=accelerando5,rhythms17,dancing39 ; 4,8,2,3,5,6
 
 
 [Mode:4]
-SpellBar=3:soothing34,8:chain23
+SpellBar=8:chain23
 
 [Mode:4:Twist]
 Enabled=TRUE
 Order=soothing34,sustenance15 ; 3,7
-CombatOrder=amplification30,chain23,arms10,soothing34,chain23,rhythms17,warsong7 ; 4,8,2,3,8,5,6
+CombatOrder=amplification30,chain23,celerity36,soothing34,chain23,rhythms17,dancing39 ; 4,8,2,3,8,5,6
 
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
+
+[Flag:MeleeOff:Melee]
+Enabled=FALSE
 
 [Flag:ElementalProtection]
 SpellBar=5:rhythms9
 [Flag:2:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=amplification30,arms10,restoration6,rhythms9,warsong7 ; 4,1,2,3,5
+CombatOrder=amplification30,celerity36,restoration6,rhythms9,dancing39 ; 4,1,2,3,5
 [Flag:3:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=amplification30,arms10,restoration6,rhythms9,warsong7 ; 4,1,2,3,5
+CombatOrder=amplification30,celerity36,restoration6,rhythms9,dancing39 ; 4,1,2,3,5
 [Flag:4:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=amplification30,arms10,restoration6,rhythms9,warsong7 ; 4,1,2,3,5
+CombatOrder=amplification30,celerity36,restoration6,rhythms9,dancing39 ; 4,1,2,3,5
 
 [Flag:DiseaseProtection]
 SpellBar=5:rhythms13
 [Flag:2:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=amplification30,arms10,restoration6,rhythms13,warsong7 ; 4,1,2,3,5
+CombatOrder=amplification30,celerity36,restoration6,rhythms13,dancing39 ; 4,1,2,3,5
 [Flag:3:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=amplification30,arms10,restoration6,rhythms13,warsong7 ; 4,1,2,3,5
+CombatOrder=amplification30,celerity36,restoration6,rhythms13,dancing39 ; 4,1,2,3,5
 [Flag:4:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=amplification30,arms10,restoration6,rhythms13,warsong7 ; 4,1,2,3,5
+CombatOrder=amplification30,celerity36,restoration6,rhythms13,dancing39 ; 4,1,2,3,5
 
 [Flag:Underwater]
 SpellBar=8:ayre16
 [Flag:2:Underwater:Twist]
 Order=restoration6,ayre16
-CombatOrder=amplification30,arms10,restoration6,rhythms17,warsong7,ayre16
+CombatOrder=amplification30,celerity36,restoration6,rhythms17,dancing39,ayre16
 [Flag:3:Underwater:Twist]
 Order=restoration6,ayre16
-CombatOrder=amplification30,arms10,restoration6,rhythms17,warsong7,ayre16
+CombatOrder=amplification30,celerity36,restoration6,rhythms17,dancing39,ayre16
 [Flag:4:Underwater:Twist]
 Order=restoration6,ayre16
-CombatOrder=amplification30,arms10,restoration6,rhythms17,warsong7,ayre16
+CombatOrder=amplification30,celerity36,restoration6,rhythms17,dancing39,ayre16
 
 
 [Spells]
@@ -118,3 +128,5 @@ strike28=          Crission's Pixie Strike            ;Utility Detrimental,Enthr
 amplification30=   Amplification                      ;Utility Beneficial,Misc,Self
 clarity32=         Cassindra's Chorus of Clarity      ;Regen,Mana,Group v2
 soothing34=        Cantata of Soothing                ;Regen,Health/Mana,Group v2
+celerity36=        Vilia's Verses of Celerity         ;Utility Beneficial,Haste,Group v2
+dancing39=         Katta's Song of Sword Dancing      ;Utility Beneficial,Combat Innates,Group v2
