--- a/config/Bot_Timmaayy.ini
+++ b/config/Bot_Timmaayy.ini
@@ -1,6 +1,6 @@
 [State]
-Mode=2
-Flags=
+Mode=3
+Flags=PrintOff,DDOff,DotOff
 Tether=NONE
 
 [Default:CastQueue]
@@ -55,13 +55,9 @@ IAmPrimary=TRUE
 MinMana=5
 Spell=s_mez
 
-[Flag:CancelMob]
-SpellBar=3:db_disp
-[Flag:CancelMob:Debuff]
-Pcts=db_disp:100,db_slow:99
 
 [Mode:2:Buff]
-MainTank=b_ac,b_manaregen
+MainTank=b_manaregen
 Caster=b_manaregen,b_mana,b_intwis
 Healer=b_manaregen,b_mana,b_intwis
 Pet=b_ac
@@ -80,6 +76,21 @@ Caster=advancement11,b_manaregen,b_mana,b_intwis
 Healer=b_manaregen,b_mana,b_intwis
 Pet=b_ac,b_str
 Self=b_selfhp,b_ac,ultravision27,advancement11,b_mana,b_intwis,elemental33
+
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
+
+[Flag:DDOff:DD]
+Enabled=FALSE
+
+[Flag:DotOff:Dot]
+Enabled=FALSE
+
+[Flag:CancelMob]
+SpellBar=3:db_disp
+[Flag:CancelMob:Debuff]
+Pcts=+db_disp:100
 
 
 [Spells]
@@ -171,3 +182,6 @@ weakness34=        Insipid Weakness                   ;Utility Detrimental,Disem
 elemental33=       Illusion: Fire Elemental           ;Utility Beneficial,Illusion: Other,Self
 anarchy32=         Anarchy                            ;Direct Damage,Magic,Single
 shielding31=       Greater Shielding                  ;HP Buffs,Shielding,Self
+celerity39=        Celerity                           ;Utility Beneficial,Haste,Single
+shade37=           Shade                              ;Statistic Buffs,Armor Class,Single
+wipe36=            Mind Wipe                          ;Utility Detrimental,Memory Blur,Targeted AE
