Fixed summon pet weapons Added Flee tether mode

--- a/config/Bot_Xamox.ini
+++ b/config/Bot_Xamox.ini
@@ -1,7 +1,7 @@
 [State]
-Mode=2
+Mode=4
 Flags=PrintOff,AggroToAttackRating,LifeSteal
-Tether=NONE
+Tether=-1644.98, -673.67, 4.65
 
 [Default:Tether]
 Mode=PASSIVE
