Added exceptions to dotbot Fixes

--- a/config/Bot_Xamox.ini
+++ b/config/Bot_Xamox.ini
@@ -1,7 +1,7 @@
 [State]
-Mode=4
+Mode=1
 Flags=PrintOff,AggroToAttackRating,LifeSteal
-Tether=-1644.98, -673.67, 4.65
+Tether=NONE
 
 [Default:Tether]
 Mode=PASSIVE
